--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -4,8 +4,7 @@
     "version": "1.0.0",
     "description": "A basic example extension with only required keys",
     "icons": {
-        "48": "images/icon-48.png",
-        "128": "images/icon-128.png"
+        "48": "images/icon.png"
     },
     "action": {
         "default_popup": "popup.html"
