--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.8.1",
+    "ethers": "^5.7.2",
     "html-webpack-plugin": "^5.6.0",
+    "minimatch": "^9.0.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "redux": "^5.0.1",
